# prettychord

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/prompts/: plan-prettyChord.prompt.md
.github/workflows/: release.yml  snap.yml
data/: chordpro.lang  com.example.prettychord.desktop  io.github.whiver.prettychord.desktop  meson.build
po/: POTFILES  en.po  fr.po  meson.build
snap/: snapcraft.yaml
src/: Application.vala  ChordParser.vala  ChordRenderer.vala  Config.vala.in  Window.vala  main.vala  meson.build
